# k402

./: .gitignore  CHANNEL-THREAT-MODEL.md  LICENSE  PROTOCOL.md  PROVIDERS.md  README.md  SPEC-kaspa-channel-draft.md  pyproject.toml
.github/workflows/: test.yml
covenant/: channel.sil
examples/: route_demo.py
k402/: __init__.py  addresses.py  backend.py  channel.py  channel_client.py  channel_server.py  client.py  registry.py  registry_server.py  schemes.py  server.py  store.py  wallet.py
tests/: test_backend.py  test_channel.py  test_channel_client.py  test_channel_server.py  test_client.py  test_registry.py  test_schemes.py  test_server.py  test_vectors.py
tests/vectors/: channel_vouchers.json
