[project]
name = "k402"
version = "0.2.0"
description = "k402 — HTTP 402 payments on Kaspa and Bitcoin-family UTXO chains. Protocol library: client, server middleware, and PNN-backed verification. No accounts, no API keys."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kaspa Lab" }]
keywords = ["kaspa", "k402", "x402", "payments", "micropayments", "http-402", "agent-payments"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
kaspa = ["kaspa>=2.0"]
server = ["fastapi>=0.110"]
all = ["kaspa>=2.0", "fastapi>=0.110"]

[project.urls]
Homepage = "https://github.com/Kali123411/k402"
Repository = "https://github.com/Kali123411/k402"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["k402"]
